--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap');
+
+@font-face {
+  font-family: 'JMH Typewriter Bold'; 
+  src: url(fonts/JMHTypewriterBold.ttf); 
+}
+
+
 html{
 	color:#000;
 	background:#FFF;
@@ -73,10 +81,7 @@ legend {
 	color:#000;
 }
 /* START */
-@font-face {
-  font-family: 'JMH Typewriter Bold'; 
-  src: url(fonts/JMHTypewriterBold.ttf); 
-}
+
 ul {
   list-style: none; /*убираем маркеры списка*/
   margin: 0; /*убираем отступы*/
@@ -141,14 +146,21 @@ li {
     font-family: sans-serif;
     font-size: 0.8em;
     color: #8b8b8b;
+    min-width: 310px;
   }
-
+  .contacts a {
+    color: #8b8b8b;
+    text-decoration: none; 
+  }
+  .contacts a:hover {
+    color: #fa6c65;
+  }
   .nav {
     grid-area: nav;
     grid-template-rows: 1fr;
-    grid-template-columns: 12.5% 75% 12.5%;
+    grid-template-columns: 12.5% 1fr 0.2fr  12.5%;
     grid-template-areas: 
-    '. buttons .';
+    '. buttons socials .';
     align-items: center;
     background: #fbfbfb;
     font-family: sans-serif;
@@ -172,23 +184,42 @@ li {
     background: url(img/slider.png) no-repeat;
     background-size: cover;
     background-position: center;
-    font-family: sans-serif;
     font-weight: bold;
     font-size: 2em;
     color: #272727; 
     position: relative;
-  }
-  .slider div {
-    display: grid;
-    width: 100%;
     min-height: calc(100vh - 11vh - 50px);
-    text-align: center;
-    align-content: center;
   }
-  .slider div span {
+  .slider div:nth-child(3) {
+    font-size: 0.75em;
+  }
+  input {
+    border: 0;
+    background-color: #fa6c65;
+    color: #fff;
+    padding: 1.4em;
+    font-family: "Arial";
+    font-size: 0.35em;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-radius: 0.2em;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  input[type="button"]:hover {
+    background-color: #fbfbfb;
+    color: #666;
+    transition: background-color 0.3s ease;
+  }
+  .head-content {
     background: rgba(255,255,255,0.85);
     padding: 0.2em;
+    color: #5c5c5c;
+    font-family: 'Roboto Slab', serif;
   }
   .letter {
     margin-left: 20px;
+  }
+  .socials {
+    grid-area: socials;
   }
