--- a/style.css
+++ b/style.css
@@ -220,6 +220,56 @@ li {
   .letter {
     margin-left: 20px;
   }
+
+  /*social bar */
+  
   .socials {
     grid-area: socials;
+    align-content: center;
   }
+  .socials ul {
+    height: 10px; /*задаем высоту*/
+  }
+  .socials ul li a {
+    padding: 5px;
+    margin-right: 5px;
+    background-color: #fff;
+    border-radius: 11px;
+  }
+  
+  .socials ul li a:hover {
+    background-color: #f9aa5d;
+  }
+  .socials ul li img {
+    height: 12px;
+    width: 12px;
+  }
+  .socials a {
+    text-decoration: none; /*убираем подчеркивание текста ссылок*/
+    color:#666; /*меняем цвет ссылок*/
+    padding: 0; /*добавляем отступ*/
+    font-family: arial; /*меняем шрифт*/
+    line-height: 0;
+    display: block; 
+    border: 0;
+    -moz-transition: all 0.3s 0.01s ease; /*делаем плавный переход*/
+    -o-transition: all 0.3s 0.01s ease;
+    -webkit-transition: all 0.3s 0.01s ease;
+  
+  }
+  .socials ul:first-child {
+    border-left: 0;
+  }
+  .socials a:hover {
+    background: none;/*добавляем эффект при наведении*/
+  }
+  .socials ul li:nth-child(1) {
+  }
+  .socials ul li:nth-child(2) {
+  }
+  .socials ul li:nth-child(3) {
+  }
+  .socials ul li:nth-child(4) {
+  }
+
+  /* end social bar*/
