a little modernize all, start make blog, separate js in own file

--- a/style.css
+++ b/style.css
@@ -304,6 +304,7 @@ li {
     text-transform: uppercase;
     font-weight: bolder;
     font-size: 0.7em;
+    height: 150px;
   }
   .services img:nth-child(2) {
     width: 33px;
@@ -322,6 +323,10 @@ li {
     color: #bbb;
     text-decoration: none;
     line-height: 1.5em;
+    display: block;
+    position: absolute;
+    left: -46px;
+    top: 0;
   }
   .services a:hover {
     color: #fa6c65;
@@ -352,13 +357,14 @@ li {
     margin: 0 auto;
   }
   .portfolio {
-    grid-template-rows: 90px 7vh 50vw; 
+    grid-template-rows: 90px 4.2vw 50vw; 
     grid-template-columns: repeat(8, 1fr);
     grid-template-areas:
       '. latest latest latest latest latest latest .' /* определяем шаблон макета сетки, ссылаясь при этом на имена областей элементов */
       '. filter filter filter filter filter filter .' /* точка обозначает элемент без имени */
       'thumbnails thumbnails thumbnails thumbnails thumbnails thumbnails thumbnails thumbnails'; /* точка обозначает элемент без имени */
     align-items: center;
+    padding-bottom: 4.22vw;
   }
   .latest {
     grid-area: latest;
@@ -414,13 +420,24 @@ li {
     width: 21vw;
     height: 16.38vw;
     border: solid 1px black;
+    cursor: pointer;
+  }
+  .thumbnails div:after {
+    content: "";
+    background: #fff;
+    opacity: 0;
+    display: block;
+    width: 100%;
+    height: 100%; 
+  }
+  .thumbnails div:hover:after {
+    opacity: 0.25;
+    transition: opacity 1s ease-in;
   }
   .thumbnails div:hover {
     transform: scale(1.01);
-    transition: transform 0.2s ease;
-    cursor: pointer;
-    box-shadow: 0 0 5px #666;
-  }
+    transition: transform 0.3s ease;
+  } 
   #tmb1 {
     background: url(img/tmb/tmb1.png) no-repeat;
     background-size: cover;
@@ -481,6 +498,14 @@ li {
     background-size: cover;
     background-position: center; 
   }
+  .blog {
+    grid-template-columns: ;
+    grid-template-rows: ;
+    grid-template-areas: ;
+    justify-items: center;
+    justify-content: center;
+    grid-gap: 7px;
+  }
 
   @media screen and (min-width: 1331px) { /* for all screen biggest than 1331px */
     .contacts br {
@@ -503,6 +528,13 @@ li {
     .contacts br {
       display: none;
     }
+    .second-container {
+      grid-template-columns: 10% repeat(6, 1fr) 10%; /* определяем количество и ширину столбцов в макете сетки */
+      grid-template-areas:
+      '. slogan slogan slogan slogan slogan slogan .'
+      '. services services services services services services .';
+      }
+
 
   }
   @media screen and (max-width: 900px) {
@@ -533,4 +565,26 @@ li {
     .header {
       padding-left: 20px;
     }
+  }
+  @media screen and (max-width: 820px) {
+    .portfolio {
+      grid-template-rows: 90px 4.2vw 93vw; 
+      grid-template-columns: 20px repeat(6, 1fr) 20px;
+      grid-template-areas:
+        '. latest latest latest latest latest latest .' /* определяем шаблон макета сетки, ссылаясь при этом на имена областей элементов */
+        '. filter filter filter filter filter filter .' /* точка обозначает элемент без имени */
+        'thumbnails thumbnails thumbnails thumbnails thumbnails thumbnails thumbnails thumbnails'; /* точка обозначает элемент без имени */
+    }
+    .thumbnails {
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: repeat(4, 22.5vw);
+      justify-items: center;
+      justify-content: center;
+      grid-gap: 7px;
+    }
+    .thumbnails div {
+      width: 30vw;
+      height: 22.5vw;
+      border: solid 1px black;
+    }  
   }
