--- a/style.css
+++ b/style.css
@@ -565,13 +565,13 @@ li {
     height: 29vw;
     width: 100%;
     display: flex;
+    justify-content: space-around;
     flex-wrap: nowrap;
     transition: transform 0.3s ease;
   }
   .blogSlider__item {
     flex: 0 0 calc((100vw - (100vw - 100%))/3 - 4vw);
     height: 25.711vw;
-    margin-left: 1vw;
     background: #fff;
     text-transform: uppercase;
     font-family: Arial, Helvetica, sans-serif;
