--- a/style.css
+++ b/style.css
@@ -565,22 +565,22 @@ li {
     height: 29vw;
     width: 100%;
     display: flex;
-    justify-content: space-around;
     flex-wrap: nowrap;
     transition: transform 0.3s ease;
   }
   .blogSlider__item {
-    flex: 0 0 calc((100vw - (100vw - 100%))/3 - 4vw);
-    height: 25.711vw;
+    flex: 0 0 calc(100vw/3 - 4vw);
+    height: calc(33.333vw*0.75);
     background: #fff;
     text-transform: uppercase;
     font-family: Arial, Helvetica, sans-serif;
-    border: 0.005vw solid #fff;
+    border: 1px solid #fff;
     cursor: pointer;
-    padding: 0.9vw;
+    margin-left: 1vw;
+    padding: 1vw;
   }
   .blogSlider__item:hover {
-    border: 0.005vw solid darkgray;
+    border: 1px solid darkgray;
   }
   .blogSlider__item h3 {
     font-weight: bold;
@@ -591,8 +591,8 @@ li {
     color: #9f9f9f;
   }
   .blogSlider__item img {
-    width: 29.6667vw;
-    height: 19.7752vw;
+    width: 100%;
+    height: 75%;
     padding-bottom: 0.5em;
   }
   .btn {
